[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube"
version = "0.1"
requires-python = ">=3.7"
description = "A generative 3D model to accelerate the creation of 3D assets, accessories, and experiences."
authors = [
    { name = "Foundation AI", email = "foundationai@roblox.com" }
]
keywords = ["cube"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy",
    "torch>=2.2.2",
    "tqdm",
    "transformers",
    "omegaconf",
    "warp-lang",
    "accelerate>=0.26.0",
    "scikit-image",
    "huggingface_hub[cli]",
    "trimesh"
]
[project.optional-dependencies]
meshlab = ["pymeshlab"]
lint = ["ruff==0.9.10"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cube3d*"]

[tool.setuptools.package-data]
cube3d = ["configs/*.yaml"]
